# simple_cli

./: Cargo.toml  config.yaml
src/: main.rs
